# triemempalace

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
benchmarks/: convomem_bench.py  locomo_bench.py  longmemeval_bench.py  membench_bench.py
docs/: ARCHITECTURE.md  CLOSETS.md  KG_EXTRACTION.md  KG_PPR.md  MODEL_SELECTION.md  RERANKING.md
examples/: model_selection.py
hooks/: README.md
mempalace/: README.md  aggregates.py  cli.py  closet_llm.py  compress.py  config.py  convo_miner.py  dedup.py  dialect.py  diary_ingest.py  embeddings.py  entity_detector.py  entity_registry.py  fact_checker.py  general_extractor.py  hooks_cli.py  kg_extract.py  kg_ppr.py  knowledge_graph.py  layers.py  mcp_server.py  miner.py  normalize.py  onboarding.py  palace_graph.py  palace_io.py  query_sanitizer.py  repair.py  rerank.py  room_detector_local.py  searcher.py  spellcheck.py  split_mega_files.py  trie_index.py
mempalace/backends/: base.py
mempalace/i18n/: test_i18n.py
mempalace/instructions/: mine.md  search.md
tests/: conftest.py  test_aggregates.py  test_cli.py  test_closet_llm.py  test_compress.py  test_config.py  test_convo_miner.py  test_dedup.py  test_dialect.py  test_embeddings.py  test_entity_detector.py  test_entity_registry.py  test_exporter.py  test_fact_checker.py  test_general_extractor.py  test_hooks_cli.py  test_instructions_cli.py  test_kg_extract.py  test_kg_ppr.py  test_layers.py  test_mcp_server.py  test_miner.py  test_normalize.py  test_palace_io.py  test_readme_claims.py  test_repair.py  test_rerank.py  test_room_detector_local.py  test_searcher.py  test_spellcheck.py  test_spellcheck_extra.py  test_split_mega_files.py  test_trie_index.py  test_trie_index_benchmarks.py
tests/benchmarks/: conftest.py  data_generator.py  report.py  test_chromadb_stress.py  test_ingest_bench.py  test_layers_bench.py  test_mcp_bench.py  test_memory_profile.py  test_recall_threshold.py
